referencia thiesen - analise widmer

--- a/melodic-contour.bib
+++ b/melodic-contour.bib
@@ -324,3 +324,30 @@
   author        = {Arnold Schönberg},
   address       = {London}
 }
+
+@Article{         thiesen:navegando,
+ author         = {Roberto Thiesen},
+ title          = {Navegando em Suave Mari Magno, Op. 97 de Ernst
+                  Widmer: uma aplicação da teoria dos conjuntos e da
+                  análise dos contornos},
+ journal        = {Ictus},
+ year           = 2005,
+ volume         = 6,
+ note           = {\url{http://www.ictus.ufba.br/index.php/ictus/article/view/62}},
+ abstract       = {Este artigo tem por objetivo analisar uma peça para
+                  piano de Ernst Widmer, Suave Mari Magno, op. 97. A
+                  partir de dados biográficos essenciais do compositor
+                  e da gênese da peça, a análise utiliza como
+                  ferramental teórico a pitch class theory e a análise
+                  de contornos conforme Friedmann, buscando
+                  fundamentação para a observação de aspectos de
+                  coerência musical interna e das associações com a
+                  ambiência marítima propiciadas pelo título, epígrafe
+                  e comentários do compositor. A análise correlaciona
+                  a lógica compositiva da peça com intenções
+                  semântico-expressivas manifestadas por Widmer,
+                  trazendo à tona processos composicionais
+                  diversificados e apontando a convivência de técnicas
+                  tradicionais com gestos musicais característicos do
+                  século XX.}
+}
