tira acentos TeX e usa acentos "normais"

--- a/harmonic-analysis.bib
+++ b/harmonic-analysis.bib
@@ -103,7 +103,7 @@
 }
 
 @InCollection{    pachet:computer,
-  author        = {Fran\c{c}ois Pachet},
+  author        = {François Pachet},
   title         = {Computer Analysis of Jazz Chord Sequence: Is Solar a
                   Blues?},
   booktitle     = {Readings in Music and Artificial Intelligence},
@@ -345,7 +345,7 @@
 }
 
 @TechReport{      rgensen.ea:harmonisation,
-  author        = {Martin Elmer J\o rgensen and S\o ren Tjagvad Madsen},
+  author        = {Martin Elmer Jørgensen and Søren Tjagvad Madsen},
   title         = {Harmonisation of Bach chorales},
   institution   = {University of Aarhus},
   year          = 2002,
