small fixes, novo arquivo de config

--- a/composition.bib
+++ b/composition.bib
@@ -72,7 +72,7 @@
 }
 
 @Book{		  schillinger:schillinger,
-  title		= {{The Schillinger System of Musical Composition}},
+  title		= {The Schillinger System of Musical Composition},
   publisher	= {Carl Fischer, Inc},
   year		= {1946},
   author	= {Joseph Schillinger},
@@ -82,6 +82,7 @@
 
 @Book{		  schonberg:fundamentals,
   title		= {Fundamentals of musical composition},
+  key =          {schonberg:fundamentals},
   publisher	= {Faber and Faber Ltd},
   year		= {1967},
   editor	= {Gerald Strange and Leonard Stein},
