--- a/programs.bib
+++ b/programs.bib
@@ -11,8 +11,6 @@
   title         = {The CL-Yacc Manual},
   howpublished  = {Available at
                   \url{www.pps.jussieu.fr/~jch/software/cl-yacc/cl-yacc.html}}
-                  ,
-  year          = {s.d.}
 }
 
 @Misc{            haible.ea:clisp,
@@ -41,10 +39,10 @@
 
 @Misc{            nissen:fann,
   author        = {Steffen Nissen},
+  key =          "nissen:fann",
   title         = {Fast Artificial Neural Network Library},
   howpublished  = {Available at
                   \url{leenissen.dk/fann/html/files/fann-h.html}},
-  year          = {s.d.}
 }
 
 @Misc{            parker:lexer,
@@ -52,7 +50,6 @@
   title         = {Lexer Package},
   howpublished  = {Available at
                   \url{www.geocities.com/mparker762/clawk.html#lexer}},
-  year          = {s.d.}
 }
 
 @Misc{            team:sbcl,
