--- a/artifical-inteligence.bib
+++ b/artifical-inteligence.bib
@@ -1,4 +1,13 @@
-@Book{            mitchell:machine,
+
+@Book{            duda.ea00:pattern,
+  author        = "Richard O. Duda and Peter E. Hart and David G. Stork",
+  title         = "Pattern Classification",
+  publisher     = "Wiley",
+  edition       = {2nd},
+  year          = "2000"
+}
+
+@Book{            mitchell97:machine,
   author        = "Tom M. Mitchell",
   title         = "Machine Learning",
   publisher     = "McGraw-Hill",
@@ -7,15 +16,7 @@
   year          = "1997"
 }
 
-@Book{            duda.ea:statistical,
-  author        = "Richard O. Duda and Peter E. Hart and David G. Stork",
-  title         = "Pattern Classification",
-  publisher     = "Wiley",
-  edition       = {2nd},
-  year          = "2000"
-}
-
-@Book{            russell.ea:artificial,
+@Book{            russell.ea02:artificial,
   author        = {Stuart Russell and Peter Norvig},
   title         = {Artificial Intelligence: A Modern Approach},
   publisher     = {Prentice Hall},
