--- a/coding.bib
+++ b/coding.bib
@@ -1,5 +1,5 @@
 
-@Article{         brinkman:binomial,
+@Article{         brinkman86:binomial,
   author        = {Brinkman, Alexander R.},
   title         = {A Binomial Representation of Pitch for Computer Processing
                   of Musical Data},
@@ -9,7 +9,7 @@
   pages         = {44-57}
 }
 
-@Article{         hewlett:base-40,
+@Article{         hewlett92:base-40,
   author        = {Hewlett, Walter B.},
   title         = {A base-40 number-line representation of musical pitch
                   notation},
@@ -20,7 +20,7 @@
   url           = {http://www.ccarh.org/publications/reprints/base40/}
 }
 
-@Article{         oliveira:busca,
+@Article{         oliveira01:busca,
   author        = {Jamary Oliveira},
   title         = {Em busca de uma codificação},
   journal       = {Cuadernos Interamericanos De Investigación en Educación
