--- a/dont-have.bib
+++ b/dont-have.bib
@@ -1,4 +1,19 @@
-@Article{         temperley:algorithm,
+
+@Article{         fix.ea89:important,
+  author        = {Evelyn Fix and Joseph L. Hodges},
+  title         = {An Important Contribution to Nonparametric Discriminant
+                  Analysis and Density Estimation: Commentary on Fix and
+                  Hodges (1951) },
+  journal       = {International Statistical Review},
+  volume        = 57,
+  number        = 3,
+  pages         = {233-238},
+  year          = 1989,
+  url           = {http://links.jstor.org/sici?sici=0306-7734(198912)57\%3A3<233\%3AEFAJH\(>2.0.CO\%3B2-8}
+                  
+}
+
+@Article{         temperley96:algorithm,
   author        = {Temperley, David},
   title         = {An Algorithm for Harmonic Analysis},
   journal       = {Music Perception},
@@ -8,7 +23,7 @@
   pages         = {31-68}
 }
 
-@Article{         white.ea:superstitious,
+@Article{         white.ea95:superstitious,
   author        = {Allan P. White and Wei Zhong Liu},
   title         = {Superstitious learning and induction},
   journal       = {Artificial Intelligence Review},
@@ -16,15 +31,4 @@
   volume        = 9,
   number        = 1,
   url           = {http://www.springerlink.com/content/l764p6v0225v3mx6/}
-}
-
-@Article{         fix.ea:important,
- author         = {Evelyn Fix and Joseph L. Hodges},
- title          = {An Important Contribution to Nonparametric Discriminant Analysis and Density Estimation: Commentary on Fix and Hodges (1951) },
- journal        = {International Statistical Review},
- volume         = 57,
- number         = 3,
- pages          = {233-238},
- year           = 1989,
- url            = {http://links.jstor.org/sici?sici=0306-7734(198912)57\%3A3<233\%3AEFAJH\(>2.0.CO\%3B2-8}
 }
