--- a/icmc.bib
+++ b/icmc.bib
@@ -1,4 +1,5 @@
-@InProceedings{   illescas.ea:harmonic,
+
+@InProceedings{   illescas.ea07:harmonic,
   author        = "Plácido R. Illescas and David Rizo and José M. Iñesta",
   title         = "Harmonic, melodic, and functional automatic analysis",
   booktitle     = "Proceedings of the 2007 International Computer Music
