--- a/music-harmony-and-theory.bib
+++ b/music-harmony-and-theory.bib
@@ -1,5 +1,5 @@
 
-@Book{            aldwell.ea:harmony,
+@Book{            aldwell.ea89:harmony,
   title         = {Harmony and voice leading},
   publisher     = {Harcourt Brace Jovanovich},
   year          = {1989},
@@ -7,7 +7,7 @@
   address       = {San Diego}
 }
 
-@Book{            forte:structure,
+@Book{            forte73:structure,
   title         = {The Structure of Atonal Music},
   publisher     = {Yale University Press},
   year          = {1973},
@@ -16,7 +16,7 @@
   isbn          = {300016107}
 }
 
-@Book{            forte:tonal,
+@Book{            forte79:tonal,
   title         = {Tonal harmony in concept and practice},
   publisher     = {Holt Rinehart and Winston},
   year          = {1979},
@@ -24,7 +24,7 @@
   address       = {New York}
 }
 
-@Book{            gauldin:harmonic,
+@Book{            gauldin97:harmonic,
   title         = {Harmonic practice in tonal music},
   publisher     = {W.W. Norton},
   year          = {1997},
@@ -35,7 +35,7 @@
                   
 }
 
-@Book{            gauldin:harmonic*1,
+@Book{            gauldin05:harmonic,
   title         = {Harmonic practice in tonal music},
   publisher     = {W.W. Norton},
   year          = {2005},
@@ -44,7 +44,7 @@
   edition       = {2th}
 }
 
-@Book{            green:form,
+@Book{            green79:form,
   title         = {Form in tonal music: an introduction to analysis},
   publisher     = {Holt Rinehart and Winston},
   year          = {1979},
@@ -52,7 +52,7 @@
   address       = {New York}
 }
 
-@Book{            koechlin:traite,
+@Book{            koechlin46:trait©,
   title         = {Trait√© de l'Harmonie},
   publisher     = {Max Eschig},
   year          = {1946},
@@ -61,7 +61,7 @@
   address       = {Paris}
 }
 
-@Book{            kohs:musical,
+@Book{            kohs76:musical,
   title         = {Musical Form: Studies in Analysis and Synthesis},
   publisher     = {Houghton Wifflin},
   year          = {1976},
@@ -71,7 +71,7 @@
   timestamp     = {2007.03.22}
 }
 
-@Book{            kostka.ea:tonal,
+@Book{            kostka.ea00:tonal,
   author        = {Stefan M. Kostka and Dorothy Payne},
   title         = {Tonal Harmony, with an introduction to twentieth-century
                   music},
@@ -81,7 +81,7 @@
   edition       = {4th}
 }
 
-@Book{            kostka.ea:workbook,
+@Book{            kostka.ea00:workbook,
   title         = {Workbook for Tonal harmony, with an introduction to
                   twentieth-century music},
   publisher     = {McGraw-Hill College},
@@ -90,7 +90,7 @@
   address       = {Boston}
 }
 
-@Book{            kostka.ea:tonal*1,
+@Book{            kostka.ea89:tonal,
   title         = {Tonal harmony, with an introduction to twentieth-century
                   music},
   publisher     = {A.A. Knopf},
@@ -99,7 +99,7 @@
   address       = {New York}
 }
 
-@Book{            kostka.ea:tonal*2,
+@Book{            kostka.ea03:tonal,
   title         = {Tonal harmony, with an introduction to twentieth-century
                   music},
   publisher     = {McGraw-Hill},
@@ -109,7 +109,7 @@
   edition       = {5th}
 }
 
-@Book{            lerdahl.ea:generative,
+@Book{            lerdahl.ea83:generative,
   author        = {Lerdahl, F. and R. Jackendoff},
   title         = {A Generative Theory of Tonal Music},
   publisher     = {MIT Press},
@@ -117,7 +117,7 @@
   address       = {Cambridge}
 }
 
-@Book{            morris:figured,
+@Book{            morris33:figured,
   author        = {Reginald Owen Morris},
   title         = {Figured Harmony at the Keyboard},
   publisher     = {Oxford University Press},
@@ -127,15 +127,16 @@
   isbn          = {193214717}
 }
 
-@Book{            motte:armonia,
- author         = {{Diether de la} Motte},
- title          = {Armonia},
- publisher      = {Editorial Labor},
- year           = 1989,
- address        = {Barcelona},
- note           = {Trad. Luis Romano Haces}}
+@Book{            motte89:armonia,
+  author        = {{Diether de la} Motte},
+  title         = {Armonia},
+  publisher     = {Editorial Labor},
+  year          = 1989,
+  address       = {Barcelona},
+  note          = {Trad. Luis Romano Haces}
+}
 
-@Book{            piston:harmony,
+@Book{            piston59:harmony,
   title         = {Harmony},
   publisher     = {Victon Gollancz Ltd},
   year          = {1959},
@@ -144,14 +145,14 @@
   pdf           = {/shared/books/piston:harmony.pdf}
 }
 
-@Book{            rahn:basic,
+@Book{            rahn80:basic,
   title         = {Basic Atonal Theory},
   publisher     = {Longman},
   year          = {1980},
   author        = {Rahn, J.}
 }
 
-@Book{            straus:introduction,
+@Book{            straus90:introduction,
   title         = {Introduction to post-tonal theory},
   publisher     = {Prentice Hall},
   year          = {1990},
@@ -160,7 +161,7 @@
   isbn          = {136866921}
 }
 
-@Book{            wedge:applied,
+@Book{            wedge30:applied,
   title         = {Applied Harmony: A Text-book},
   publisher     = {G. Schirmer, Inc.},
   year          = {1930},
@@ -168,11 +169,11 @@
   address       = {New York}
 }
 
-@Book{            zamacois:tratado,
- author         = {Joaquin Zamacois},
- title          = {Tratado de Armonia},
- publisher      = {Editorial Labor},
- year           = 1948,
- volume         = 3,
- address        = {Barcelona}}
-
+@Book{            zamacois48:tratado,
+  author        = {Joaquin Zamacois},
+  title         = {Tratado de Armonia},
+  publisher     = {Editorial Labor},
+  year          = 1948,
+  volume        = 3,
+  address       = {Barcelona}
+}
