--- a/music-scores.bib
+++ b/music-scores.bib
@@ -1,14 +1,15 @@
-@Book{            bach:371,
+
+@Book{            bach41:371,
   author        = {Johann Sebastian Bach},
   editor        = {Albert Riemenschneider},
   title         = {371 Harmonized Chorales and 69 Chorale Melodies with
                   figured bass},
   publisher     = {G. Schirmer},
   year          = {1941},
-  address       = {New York},
+  address       = {New York}
 }
 
-@Book{            beethoven:complete,
+@Book{            beethoven70:complete,
   title         = {Complete String Quartets},
   publisher     = {Dover Publications, Inc},
   year          = {1970},
