--- a/programs.bib
+++ b/programs.bib
@@ -1,34 +1,29 @@
-@Misc{            baudis:git,
+
+@Misc{            baudis,
   author        = {Petr Baudis},
   title         = {Git User's Manual},
   howpublished  = {Available at
-                  \url{www.kernel.org/pub/software/scm/git/docs/user-manual.html}},
+                  \url{www.kernel.org/pub/software/scm/git/docs/user-manual.html}}
+                  ,
   year          = {s.d.}
 }
 
-@Misc{            chroboczek:cl-yacc,
+@Misc{            chroboczek,
   author        = {Juliusz Chroboczek},
   title         = {The CL-Yacc Manual},
   howpublished  = {Available at
                   \url{www.pps.jussieu.fr/~jch/software/cl-yacc/cl-yacc.html}}
+                  
 }
 
-@Misc{            haible.ea:clisp,
+@Misc{            haible.ea07:clisp,
   author        = {Bruno Haible and Michael Stoll and Sam Steingold},
   title         = {CLISP},
   howpublished  = {Available at \url{clisp.cons.org}},
   year          = 2007
 }
 
-@Misc{            nienhuys.ea:lilypond,
-  author        = {Han-Wen Nienhuys and Jan Nieuwenhuizen},
-  title         = {LilyPond},
-  howpublished  = {Available at \url{www.lilypond.org}},
-  month         = {Jan},
-  year          = 2008,
-}
-
-@Misc{            maclachlan:cmucl,
+@Misc{            maclachlan06:cmucl,
   author        = {Robert A. MacLachlan},
   title         = {CMUCL User's Manual},
   howpublished  = {Available at
@@ -37,22 +32,30 @@
   year          = 2006
 }
 
-@Misc{            nissen:fann,
-  author        = {Steffen Nissen},
-  key =          "nissen:fann",
-  title         = {Fast Artificial Neural Network Library},
-  howpublished  = {Available at
-                  \url{leenissen.dk/fann/html/files/fann-h.html}},
+@Misc{            nienhuys.ea08:lilypond,
+  author        = {Han-Wen Nienhuys and Jan Nieuwenhuizen},
+  title         = {LilyPond},
+  howpublished  = {Available at \url{www.lilypond.org}},
+  month         = {Jan},
+  year          = 2008
 }
 
-@Misc{            parker:lexer,
+@Misc{            nissen:fann,
+  author        = {Steffen Nissen},
+  key           = "nissen:fann",
+  title         = {Fast Artificial Neural Network Library},
+  howpublished  = {Available at
+                  \url{leenissen.dk/fann/html/files/fann-h.html}}
+}
+
+@Misc{            parker,
   author        = {Michael Parker},
   title         = {Lexer Package},
   howpublished  = {Available at
-                  \url{www.geocities.com/mparker762/clawk.html#lexer}},
+                  \url{www.geocities.com/mparker762/clawk.html#lexer}}
 }
 
-@Misc{            team:sbcl,
+@Misc{            team07:sbcl,
   author        = {SBCL development team},
   title         = {SBCL 1.0.13.45 User Manual},
   howpublished  = {Available at \url{www.sbcl.org/manual/}},
