--- a/composition.bib
+++ b/composition.bib
@@ -1,126 +1,126 @@
 
-@Book{		  brindle:musical,
-  title		= {Musical Composition},
-  publisher	= {Oxford University Press},
-  year		= {1986},
-  author	= {Reginald Smith Brindle},
-  abstract	= {Musical composition is a key discipline in music programs
-		  in conservatories, colleges, and universities. Many
-		  teachers consider it as important in the development of
-		  young musicians as listening and performance. It can be
-		  argued that through compositions musicians achieve the
-		  deepest insightinto the composer and his music. Musical
-		  Composition takes the student through the elements--melody,
-		  harmony, counterpoint, and rhythm--before covering a
-		  variety of special subjects such as writing vocal and
-		  choral music, accompaniments, and film and TV music.
-		  Chapters are devoted to recenttechniques including free
-		  diatonicism, serialism, and indeterminacy. Over 200
-		  examples illustrate points in the text and there are
-		  exercises for each chapter.}
+@Book{            brindle86:musical,
+  title         = {Musical Composition},
+  publisher     = {Oxford University Press},
+  year          = {1986},
+  author        = {Reginald Smith Brindle},
+  abstract      = {Musical composition is a key discipline in music programs
+                  in conservatories, colleges, and universities. Many
+                  teachers consider it as important in the development of
+                  young musicians as listening and performance. It can be
+                  argued that through compositions musicians achieve the
+                  deepest insightinto the composer and his music. Musical
+                  Composition takes the student through the elements--melody,
+                  harmony, counterpoint, and rhythm--before covering a
+                  variety of special subjects such as writing vocal and
+                  choral music, accompaniments, and film and TV music.
+                  Chapters are devoted to recenttechniques including free
+                  diatonicism, serialism, and indeterminacy. Over 200
+                  examples illustrate points in the text and there are
+                  exercises for each chapter.}
 }
 
-@Book{		  cope:techniques,
-  title		= {Techniques of the contemporary composer},
-  publisher	= {Schirmer Books},
-  year		= {1997},
-  author	= {David Cope}
+@Book{            cope97:techniques,
+  title         = {Techniques of the contemporary composer},
+  publisher     = {Schirmer Books},
+  year          = {1997},
+  author        = {David Cope}
 }
 
-@Book{		  hindemith:craft-1,
-  title		= {The Craft of musical composition},
-  publisher	= {Scott's Söhne},
-  year		= {1941},
-  author	= {Paul Hindemith},
-  volume	= {1: Theory}
+@Book{            delone.ea75:aspects,
+  title         = {Aspects of Twentieth-Century Music},
+  publisher     = {Prentice-Hall},
+  year          = {1975},
+  editor        = {Gary E. Wittlich},
+  author        = {Richard P. Delone and Vernon L. Kliewer and Horace J.
+                  Reisberg and Mary H. Wennerstrom and Allen Winold},
+  address       = {Englewood Cliffs, NJ}
 }
 
-@Book{		  hindemith:craft-2,
-  title		= {The Craft of musical composition},
-  publisher	= {Scott's Söhne},
-  year		= {1941},
-  author	= {Paul Hindemith},
-  volume	= {2: Exercises in two-part writing}
+@Book{            hindemith41:craft,
+  title         = {The Craft of musical composition},
+  publisher     = {Scott's Söhne},
+  year          = {1941},
+  author        = {Paul Hindemith},
+  volume        = {1: Theory}
 }
 
-@Book{		  kostka:materials,
-  title		= {Materials and Techniques of Twentieth-Century Music},
-  publisher	= {Prentice Hall},
-  year		= {1999},
-  author	= {Stefan M. Kostka},
-  address	= {Upper Saddle River, New Jersey},
-  edition	= {2 ed.},
-  isbn		= {1-13-924077-2}
+@Book{            hindemith41:craft-b,
+  title         = {The Craft of musical composition},
+  publisher     = {Scott's Söhne},
+  year          = {1941},
+  author        = {Paul Hindemith},
+  volume        = {2: Exercises in two-part writing}
 }
 
-@Book{		  kostka:materials-2005,
-  title		= {Materials and Techniques of Twentieth-Century Music},
-  publisher	= {Prentice Hall},
-  year		= {2005},
-  author	= {Stefan M. Kostka},
-  address	= {Upper Saddle River, New Jersey},
-  edition	= {3 ed.},
-  isbn		= {978-0131930803}
+@Book{            kostka99:materials,
+  title         = {Materials and Techniques of Twentieth-Century Music},
+  publisher     = {Prentice Hall},
+  year          = {1999},
+  author        = {Stefan M. Kostka},
+  address       = {Upper Saddle River, New Jersey},
+  edition       = {2 ed.},
+  isbn          = {1-13-924077-2}
 }
 
-@Book{		  lester:analytic,
-  title		= {Analytic approaches to twentieth-century music},
-  author	= {Joel Lester},
-  year		= {1989},
-  publisher	= {W.W. Norton \& Company},
-  isbn		= {978-0393957624}
+@Book{            kostka05:materials,
+  title         = {Materials and Techniques of Twentieth-Century Music},
+  publisher     = {Prentice Hall},
+  year          = {2005},
+  author        = {Stefan M. Kostka},
+  address       = {Upper Saddle River, New Jersey},
+  edition       = {3 ed.},
+  isbn          = {978-0131930803}
 }
 
-@Book{		  schillinger:schillinger,
-  title		= {The Schillinger System of Musical Composition},
-  publisher	= {Carl Fischer, Inc},
-  year		= {1946},
-  author	= {Joseph Schillinger},
-  address	= {New York},
-  cdd		= {781.61 S334}
+@Book{            lester89:analytic,
+  title         = {Analytic approaches to twentieth-century music},
+  author        = {Joel Lester},
+  year          = {1989},
+  publisher     = {W.W. Norton \& Company},
+  isbn          = {978-0393957624}
 }
 
-@Book{		  schonberg:fundamentals,
-  title		= {Fundamentals of musical composition},
-  key =          {schonberg:fundamentals},
-  publisher	= {Faber and Faber Ltd},
-  year		= {1967},
-  editor	= {Gerald Strange and Leonard Stein},
-  author	= {Arnold Schönberg},
-  address	= {London}
+@Book{            schillinger46:schillinger,
+  title         = {The Schillinger System of Musical Composition},
+  publisher     = {Carl Fischer, Inc},
+  year          = {1946},
+  author        = {Joseph Schillinger},
+  address       = {New York},
+  cdd           = {781.61 S334}
 }
 
-@Book{		  toch:shaping,
-  title		= {The Shaping Forces in Music: An Inquiry Into the Nature of
-		  Harmony, Melody, Counterpoint, Form},
-  publisher	= {Dover Publications},
-  year		= {1977},
-  author	= {Ernst Toch}
+@Book{            schonberg:fundamentals,
+  title         = {Fundamentals of musical composition},
+  key           = {schonberg:fundamentals},
+  publisher     = {Faber and Faber Ltd},
+  year          = {1967},
+  editor        = {Gerald Strange and Leonard Stein},
+  author        = {Arnold Schönberg},
+  address       = {London}
 }
 
-@Book{		  toch:shaping.1948,
-  title		= {The Shaping Forces in Music},
-  publisher	= {Criterion Music Corp},
-  year		= {1948},
-  author	= {Ernst Toch},
-  address	= {New York}
+@Book{            toch77:shaping,
+  title         = {The Shaping Forces in Music: An Inquiry Into the Nature of
+                  Harmony, Melody, Counterpoint, Form},
+  publisher     = {Dover Publications},
+  year          = {1977},
+  author        = {Ernst Toch}
 }
 
-@Book{		  wittlich.ea:aspects,
-  title		= {Aspects of Twentieth-Century Music},
-  publisher	= {Prentice-Hall},
-  year		= {1975},
-  editor	= {Gary E. Wittlich},
-  author	= {Richard P. Delone and Vernon L. Kliewer and Horace J.
-		  Reisberg and Mary H. Wennerstrom and Allen Winold},
-  address	= {Englewood Cliffs, NJ}
+@Book{            toch48:shaping,
+  title         = {The Shaping Forces in Music},
+  publisher     = {Criterion Music Corp},
+  year          = {1948},
+  author        = {Ernst Toch},
+  address       = {New York}
 }
 
-@Book{		  wuorinen:simple,
-  title		= {Simple composition},
-  publisher	= {Longman},
-  year		= {1979},
-  author	= {Charles Wuorinen},
-  pages		= {xi, 168},
-  address	= {New York}
+@Book{            wuorinen79:simple,
+  title         = {Simple composition},
+  publisher     = {Longman},
+  year          = {1979},
+  author        = {Charles Wuorinen},
+  pages         = {xi, 168},
+  address       = {New York}
 }
