--- a/music-notation.bib
+++ b/music-notation.bib
@@ -1,18 +1,18 @@
 
-@Book{		  heussenstamm:norton,
-  title		= {The Norton manual of music notation},
-  publisher	= {W.W. Norton},
-  year		= {1987},
-  author	= {Heussenstamm, George},
-  address	= {New York}
+@Book{            heussenstamm87:norton,
+  title         = {The Norton manual of music notation},
+  publisher     = {W.W. Norton},
+  year          = {1987},
+  author        = {Heussenstamm, George},
+  address       = {New York}
 }
 
-@Book{		  stone:music,
-  title		= {Music Notation in the Twentieth Century: A Practical
-		  Guidebook},
-  publisher	= {W.W. Norton \& Company},
-  year		= {1980},
-  author	= {Kurt Stone},
-  address	= {New York},
-  isbn		= {393950530}
+@Book{            stone80:music,
+  title         = {Music Notation in the Twentieth Century: A Practical
+                  Guidebook},
+  publisher     = {W.W. Norton \& Company},
+  year          = {1980},
+  author        = {Kurt Stone},
+  address       = {New York},
+  isbn          = {393950530}
 }
