novas entradas e correcao de encoding

--- a/music-analysis.bib
+++ b/music-analysis.bib
@@ -20,6 +20,19 @@
   isbn          = {0460126024}
 }
 
+@InCollection{    cook87:techniques,
+  author        = {Cook, Nicholas},
+  title         = {Techniques of Comparative Analysis},
+  booktitle     = {A guide to musical analysis},
+  publisher     = {J.M.Dent},
+  year          = {1987},
+  pages         = {183--214},
+  address       = {London},
+  cdd           = {781 C771},
+  crossref      = {cook87:guide},
+  isbn          = {460126024}
+}
+
 @Book{            dudeque05:music,
   title         = {Music Theory and Analysis in the Writings of Arnold
                   Schoenberg (1874-1951)},
