--- a/music-harmony-and-theory.bib
+++ b/music-harmony-and-theory.bib
@@ -1,10 +1,91 @@
 
+@Misc{            adams,
+  author        = {Ricci Adams},
+  title         = {Musictheory.net},
+  howpublished  = {Disponível em \url{musictheory.net}},
+  year          = {s.d.}
+}
+
 @Book{            aldwell.ea89:harmony,
   title         = {Harmony and voice leading},
   publisher     = {Harcourt Brace Jovanovich},
   year          = {1989},
   author        = {Edward Aldwell and Carl Schachter},
   address       = {San Diego}
+}
+
+@Article{         babbitt61:set,
+  author        = {Milton Babbitt},
+  title         = {Set Structure as a Compositional Determinant},
+  journal       = {Journal of Music Theory},
+  year          = {1961},
+  volume        = {5},
+  pages         = {72--94},
+  number        = {1},
+  publisher     = {JSTOR}
+}
+
+@Article{         babbitt60:twelve-tone,
+  author        = {Milton Babbitt},
+  title         = {Twelve-Tone Invariants as Compositional Determinants},
+  journal       = {The Musical Quarterly},
+  year          = {1960},
+  volume        = {46},
+  pages         = {246--259},
+  number        = {2},
+  publisher     = {JSTOR}
+}
+
+@Misc{            bordini,
+  author        = {Ricardo Bordini},
+  title         = {Departamento de Composição, Literatura e Estruturação
+                  Musical. Materiais Didáticos},
+  howpublished  = {Disponível em
+                  \url{www.clem.ufba.br/materiais-didaticos.html}},
+  year          = {s.d.}
+}
+
+@PhDThesis{       bordini03:teoria,
+  author        = {Ricardo Mazzini Bordini},
+  title         = {A teoria pós-tonal e o processador de classes de notas
+                  aplicados à composição musical: um tutorial},
+  school        = {Universidade Federal da Bahia. Escola de Música},
+  year          = {2003},
+  type          = {Tese (doutorado)},
+  address       = {Salvador},
+  abstract      = {Este trabalho tem por objeto a elaboração de um Tutorial
+                  utilizando recursos de hipertexto para vincular: 1)
+                  conceitos e definições da Teoria Pós-tonal, 2) as
+                  operações do Processador de Classes de Notas (PCN) do Dr.
+                  Jamary Oliveira, e 3) exercícios de composição. Essa
+                  integração permite ao usuário transferir o conhecimento
+                  entre as duas primeiras seções e aplicar o aprendizado na
+                  terceira. O Capítulo 1 aborda as questões referentes à
+                  estrutura formal do trabalho e os aspectos técnicos
+                  envolvidos em sua realização. O Capítulo 2 apresenta um
+                  breve histórico da geração da Teoria, detalhes da
+                  documentação do PCN, e comentários sobre a tradução do
+                  livro: Introduction to Post-Tonal Theory, do Dr. Joseph N.
+                  Straus, tradução essa que autorizada pelo autor vai em
+                  anexo. Esse capítulo motiva o Apêndice 1, o qual contém
+                  dados estatísticos sobre as obras mais utilizadas como
+                  exemplo para tópicos da Teoria. O Capítulo 3 compreende
+                  basicamente as questões relativas ao Tutorial e remete-se
+                  a três apêndices: o Apêndice 2, que lista acrônimos
+                  ligados à XML (linguagem de marcação utilizada no
+                  Tutorial); o Apêndice 3, que inclui a documentação do
+                  XML Schema e a codificação em XML do Tutorial; e o
+                  Apêndice 4, que traz a composição musical originada da
+                  resolução dos exercícios. Finalmente, o Capítulo 4
+                  contém a conclusão do trabalho. Há também um CD anexo
+                  contendo o Tutorial, a documentação do Schema em formato
+                  HTML, e uma gravação digital da composição.},
+  annote        = {Orientador: Jamary Oliveira},
+  citeseerurl   = {http://www.ufba.br/tedesimples/tde_busca/arquivo.php?codArquivo=277
+                  http://www.ufba.br/tedesimples/tde_busca/arquivo.php?codArquivo=278}
+                  ,
+  pdf           = {/home/marcos/backup/exclude-backup/docs/teses/bordini03-1.pdf}
+                  
 }
 
 @Book{            forte73:structure,
