--- a/music-scores.bib
+++ b/music-scores.bib
@@ -9,6 +9,30 @@
   address       = {New York}
 }
 
+@Book{            bartók.ea97:concerto,
+  title         = {Concerto for orchestra = Concerto pour orchestre = Konzert
+                  für Orchester},
+  publisher     = {Boosey \& Hawkes},
+  year          = {1997},
+  author        = {Bartók, Béla and MacDonald, Malcolm},
+  pages         = {1 score (viii, 150 )},
+  address       = {London ; New York},
+  annote        = {Béla Bartók.
+                  
+                  Concerto pour orchestre
+                  
+                  Konzert für Orchester
+                  
+                  Full orchestral score.
+                  
+                  port. ; 31 cm.
+                  
+                  Duration: 38:00.
+                  
+                  Introduzione -- Giuoco delle coppie -- Elegia -- Intermezzo
+                  interrotto -- Finale.}
+}
+
 @Book{            beethoven70:complete,
   title         = {Complete String Quartets},
   publisher     = {Dover Publications, Inc},
