--- a/melodic-contour.bib
+++ b/melodic-contour.bib
@@ -127,6 +127,20 @@
   number        = {3}
 }
 
+@InBook{          edworthy85:musical,
+  chapter       = {Melodic contour and musical structure},
+  pages         = {169--188},
+  title         = {Musical Structure and Cognition},
+  publisher     = {Academic Press Inc},
+  year          = {1985},
+  author        = {Judy Edworthy},
+  address       = {London},
+  booktitle     = {Musical Structure and Cognition},
+  keywords      = {melodic contour},
+  owner         = {marcos},
+  timestamp     = {2007.05.25}
+}
+
 @Article{         friedmann87:response,
   author        = {Michael L. Friedmann},
   title         = {A Response: My Contour, Their Contour},
@@ -166,6 +180,16 @@
   editor        = {Gary E. Wittlich},
   author        = {Vernon Kliewer},
   address       = {Englewwod Cliffs, NJ}
+}
+
+@Article{         kolinski65:structure,
+  author        = {Mieczislaw Kolinski},
+  title         = {The Structure of Melodic Movement: A new Method of
+                  Analysis},
+  journal       = {Studies in Ethnomusicology},
+  year          = {1965},
+  volume        = {2},
+  pages         = {96--120}
 }
 
 @PhDThesis{       marvin88:generalized,
@@ -314,6 +338,38 @@
   annote        = {http://links.jstor.org/sici?sici=0195-6167(199723)19%3A2%3C232%3AFETTTO%3E2.0.CO%3B2-W}
                   ,
   pdf           = {/shared/docs/jstor/quinn:fuzzy.pdf}
+}
+
+@Article{         seeger69:formational,
+  author        = {Charles Seeger},
+  title         = {On the Formational Apparatus of the Music Compositional
+                  Process},
+  journal       = {Ethnomusicology},
+  year          = {1969},
+  volume        = {13},
+  pages         = {230--247},
+  number        = {2},
+  annote        = {http://links.jstor.org/sici?sici=0014-1836(196905)13%3A2%3C230%3AOTFAOT%3E2.0.CO%3B2-Z}
+                  ,
+  doi           = {10.2307/850147},
+  pdf           = {/home/marcos/profissional/docs/shared-docs/jstor/seeger1969fam.pdf}
+                  ,
+  publisher     = {JSTOR}
+}
+
+@Article{         seeger60:moods,
+  author        = {Charles Seeger},
+  title         = {On the moods of a musical logic},
+  journal       = {Journal of the American Musicological Society},
+  year          = {1960},
+  volume        = {13},
+  pages         = {224--261},
+  number        = {1/3},
+  annote        = {http://links.jstor.org/sici?sici=0003-0139(1960)13%3A1%2F3%3C224%3AOTMOAM%3E2.0.CO%3B2-0}
+                  ,
+  pdf           = {/home/marcos/profissional/docs/shared-docs/jstor/seeger1960mml.pdf}
+                  ,
+  publisher     = {JSTOR}
 }
 
 @Article{         thiesen05:navegando,
