novas entradas e abstract em alguns ismir

--- a/ismir.bib
+++ b/ismir.bib
@@ -4481,6 +4481,22 @@
   month         = {October},
   publisher     = {},
   isbn          = {},
+  abstract      = {Identifying a musical work from a melodic fragment is a
+                  task that most people are able to accomplish with relative
+                  ease. For some time now researchers have worked to give
+                  computers this ability as well, as it would be the
+                  cornerstone of any query-by-humming system. To accomplish
+                  this, it i s reasonable to study how humans are able to
+                  perform this task, and to assess what features we use to
+                  determine melodic similarity. Research has shown that
+                  melodic contour is an important feature in determining
+                  melodic similarity, but it i s also clear that rhythmic
+                  information is important as well. The goal of this research
+                  is to explore what variation of contour and rhythmic
+                  information can result in the most efficient, robust, and
+                  scalable representation for melody. We intend for this to
+                  be the basis of a query-by-humming system that will be used
+                  to test the validity of our proposed representation.},
   file          = {2000/posters/kim.pdf}
 }
 
@@ -9638,6 +9654,20 @@
   month         = {October},
   publisher     = {The Johns Hopkins University},
   isbn          = {2-9746194-0-1},
+  abstract      = {In 1975 Parsons developed his dictionary of musical themes
+                  based on a simple contour representation. The motivation
+                  was that people with little training in music would be able
+                  to identify pieces of music. We decided to test whether
+                  people of various levels of musical skill could indeed make
+                  use of a text representation to describe a simple melody
+                  query. The results indicate that the task is beyond those
+                  who are unmusical, and that a scale numeric representation
+                  is easier than a contour one for those of moderate musical
+                  skill. Further, a common error when using the scale
+                  representation still yields a more accurate contour
+                  representation than if a user is asked to enter a contour
+                  query. We observed an average query length of about seven
+                  symbols for the retrieval task.},
   file          = {2003/papers/Uitdenbogerd.PDF}
 }
 
