--- a/melodic-contour.bib
+++ b/melodic-contour.bib
@@ -171,6 +171,14 @@
   pdf           = {/shared/docs/jstor/friedmann:methodology.pdf}
 }
 
+@PhDThesis{       ishiyama96:application,
+  author        = {Ishiyama, M.},
+  title         = {The Application of Contour Theories to Roger Sessions's
+                  Five Pieces for Piano (1975)},
+  school        = {Florida State University},
+  year          = {1996}
+}
+
 @InBook{          kliewer75:aspects,
   chapter       = {Melody: Linear aspects of Twentieth-century Music},
   pages         = {270--321},
@@ -190,6 +198,31 @@
   year          = {1965},
   volume        = {2},
   pages         = {96--120}
+}
+
+@MastersThesis{   lindsay96:using,
+  author        = {Adam Taro Lindsay},
+  title         = {Using contour as a mid-level representation of melody},
+  school        = {Massachusetts Institute of Technology, Program in Media
+                  Arts \& Sciences},
+  year          = {1996},
+  abstract      = {A psychological experiment is described, in which subjects
+                  were required to repeat short melodies presented over
+                  headphones. Subjects' performances were recorded and
+                  analyzed, revealing that errors in musical performance
+                  followed certain patterns across all subjects. An important
+                  finding was that errors remained constant regardless of
+                  note distance in time and frequency. This result suggests
+                  that subjects use an enhanced melodic contour as their
+                  basic representational form. A model based on this Þnding
+                  for use in computer-driven melody recognition is proposed.
+                  Query-by-humming, other applications, and future research
+                  directions are also discussed.},
+  annote        = {http://citeseer.ist.psu.edu/rd/0%2C333574%2C1%2C0.25%2CDownload/http://citeseer.ist.psu.edu/cache/papers/cs/16320/http:zSzzSzsound.media.mit.eduzSz%7EalindsayzSzThesis.pdf/lindsay96using.pdf}
+                  ,
+  citeseerurl   = {http://citeseer.ist.psu.edu/lindsay96using.html},
+  pdf           = {/home/marcos/profissional/docs/shared-docs/teses/lindsay1996ucm.pdf}
+                  
 }
 
 @PhDThesis{       marvin88:generalized,
@@ -286,6 +319,13 @@
   author        = {Robert D. Morris}
 }
 
+@Book{            parsons75:directory,
+  title         = {The Directory of Tunes and Musical Themes},
+  publisher     = {Spencer Brown},
+  year          = {1975},
+  author        = {Denys Parsons}
+}
+
 @Article{         polansky.ea92:possible,
   author        = {Larry Polansky and R. Bassein},
   title         = {Possible and Impossible Melody: some Formal Aspects of
@@ -338,6 +378,113 @@
   annote        = {http://links.jstor.org/sici?sici=0195-6167(199723)19%3A2%3C232%3AFETTTO%3E2.0.CO%3B2-W}
                   ,
   pdf           = {/shared/docs/jstor/quinn:fuzzy.pdf}
+}
+
+@Article{         roy.ea04:contour-based,
+  author        = {Roy, Samantra Dutta and Rao, Pao and Galinde, Ameya.S.},
+  title         = {Contour-based melody representation: an analytical study},
+  journal       = {Proceedings of National Conference on Communications
+                  (NCC)},
+  year          = {2004},
+  pages         = {536--540},
+  abstract      = {In this paper, we identify parameters crucial to the
+                  performance of a Query By Humming (QBH) system, and present
+                  an analytical approach to determining optimal values of
+                  such parameters. Existing systems use heuristically chosen
+                  parameters - our analytical results are in accordance with
+                  such values. We present results of experimentation with
+                  simulated data, as well as an actual melody database of a
+                  QBH system.},
+  annote        = {http://www.ee.iitb.ac.in/~sumantra/publications/ncc04_qbh.pdf}
+                  
+}
+
+@Article{         schmuckler99:testing,
+  author        = {Mark A. Schmuckler},
+  title         = {Testing Models of Melodic Contour Similarity},
+  journal       = {Music Perception},
+  year          = {1999},
+  volume        = {16},
+  pages         = {295--326},
+  number        = {3}
+}
+
+@Article{         schubert.ea06:effect,
+  author        = {Emery Schubert and Catherine Stevens},
+  title         = {The effect of implied harmony, contour and musical
+                  expertise on judgments of similarity of familiar melodies},
+  journal       = {Journal of New Music Research},
+  year          = {2006},
+  volume        = {35},
+  pages         = {161--174},
+  number        = {2},
+  abstract      = {According to Western music theory, familiar melodies
+                  containing alterations which shift them a long distance
+                  (harmonically) from the original should be considered
+                  perceptually dissimilar relative to the original. It is
+                  possible to obtain such a large shift with a small change
+                  in melodic pitch. However, this creates a paradox with
+                  pitch (contour) shifting, which is known to reduce
+                  similarity minimally if the distance from the original is
+                  small. We investigated the hypotheses that (1)
+                  manipulations to contour and implied harmony of an original
+                  melody reduce similarity scores and (2) novices are less
+                  sensitive to implied harmony changes than experts, but as
+                  sensitive as experts to contour manipulations. Twenty-eight
+                  novices and 44 expert musicians rated similarity of
+                  familiar nursery rhyme tunes compared with close and
+                  distant harmonic transformations plus close and distant
+                  pitch shifts. Results indicated that both groups use
+                  contour (pitch distance) to determine similarity, but that
+                  musically experienced listeners also use implied harmony to
+                  make further distinctions. It is argued that as listeners
+                  become more experienced, they rely on more sophisticated
+                  strategies for encoding and organizing melodies in memory,
+                  with deeper structural aspects of music being used when
+                  other strategies such as contour are uninformative or
+                  non-distinctive. These new findings, that contour and
+                  harmony affect judged similarity for simple, familiar
+                  melodies, have implications for theories of memory for
+                  music, and for the design of automated music retrieval and
+                  data mining systems.},
+  annote        = {http://taylorandfrancis.metapress.com/index/GH5342293814655N.pdf}
+                  ,
+  publisher     = {Taylor \& Francis}
+}
+
+@Article{         scipio00:analysis,
+  author        = {Agostino Di Scipio},
+  title         = {An analysis of Jean-Claude Risset's Contours},
+  journal       = {Journal of New Music Research},
+  year          = {2000},
+  volume        = {29},
+  pages         = {1--21},
+  number        = {1},
+  abstract      = {This paper discusses an analysis of Jean-Claude Risset's
+                  Contours , a tape work composed in 1982 using only computer
+                  sound synthesis. The analysis is based on recorded traces
+                  of the compositional process (Music code listings, verbal
+                  and graphical annotations), and focuses on sound design
+                  criteria. It attempts to elucidate the connection between
+                  these criteria and the overall structure of the musical
+                  work. In short, it investigates the observable link between
+                  ''composing-the-sound'' and ''composing-with-sounds'' in
+                  the making of Contours . The psychoacoustic relationship of
+                  pitch to timbre is crucial, and was a primary concern in
+                  all of Risset's operations in composing this work. In order
+                  to let a particular pitch contour either dissolve, or
+                  emerge from various timbral transformations, the composer
+                  devised several ad hoc sound design strategies strictly
+                  functional to the compositional concept. Further remarks
+                  are proposed concerning a twofold aesthetic dimension
+                  peculiar to this music: on the one hand, we have a legacy
+                  to the French tradition of musical impressionism; on the
+                  other, we have a more constructivist attitude, hidden
+                  behind what at first may sound as a decorative interplay of
+                  fascinating sound colors.},
+  annote        = {http://taylorandfrancis.metapress.com/index/65PU0GDT2QC08P48.pdf}
+                  ,
+  publisher     = {Taylor \& Francis}
 }
 
 @Article{         seeger69:formational,
