--- a/music-history.bib
+++ b/music-history.bib
@@ -54,6 +54,15 @@
                   1911.}
 }
 
+@Book{            almeida42:história-da-música-brasileira,
+  title         = {{História da música brasileira}},
+  author        = {Renato Almeida},
+  year          = {1942},
+  publisher     = {F. Briguiet},
+  address       = {Rio de Janeiro},
+  edition       = {2. ed.}
+}
+
 @Book{            austin66:music,
   title         = {Music in the 20th century, from Debussy through
                   Stravinsky},
@@ -534,6 +543,15 @@
                   Micro-opaque. [Rochester, N.Y.]: U[niversitiy of]
                   R[ochester Press, 19]58. 39 microcards: ill., maps ; 8 x 13
                   cm.}
+}
+
+@Book{            mello08:a-música-no-brasil-desde-os-tempos-coloniaes-até-o-primeiro-decênio-da-república,
+  title         = {{A música no Brasil desde os tempos coloniaes até o
+                  primeiro decênio da República}},
+  author        = {{Guilherme Teodoro Preira de} Mello},
+  year          = {1908},
+  publisher     = {Typographia de S. Joaquim},
+  address       = {Bahia}
 }
 
 @Book{            morgan91:twentieth-century,
