--- a/melodic-contour.bib
+++ b/melodic-contour.bib
@@ -171,6 +171,18 @@
   pdf           = {/shared/docs/jstor/friedmann:methodology.pdf}
 }
 
+@Article{         hanninen01:orientations,
+  author        = {Dora A. Hanninen},
+  title         = {Orientations, criteria, segments: a general theory of
+                  segmentation for music analysis},
+  journal       = {Journal of Music Theory},
+  year          = 2001,
+  volume        = 45,
+  number        = 2,
+  pages         = {345-433},
+  file          = {/shared/docs/jstor/hanninen01:orientations}
+}
+
 @PhDThesis{       ishiyama96:application,
   author        = {Ishiyama, M.},
   title         = {The Application of Contour Theories to Roger Sessions's
@@ -324,6 +336,18 @@
   publisher     = {Spencer Brown},
   year          = {1975},
   author        = {Denys Parsons}
+}
+
+@Article{         pearsall04:transformational,
+  author        = {Edward Pearsall},
+  title         = {Transformational streams: unraveling melodic processes in
+                  Twentieth-Century Motivic Music},
+  journal       = {Journal of Music Theory},
+  year          = 2004,
+  volume        = 48,
+  number        = 1,
+  pages         = {69--98},
+  file          = {/shared/docs/jstor/pearsall04:transformational.pdf}
 }
 
 @Article{         polansky.ea92:possible,
