Colocando literatura de biases

--- a/dont-have.bib
+++ b/dont-have.bib
@@ -13,6 +13,16 @@
                   
 }
 
+@Book{            gilovich.ea02:heuristics,
+  author        = {T. Gilovich and D. Griffin and D. Kahneman},
+  title         = {Heuristics and Biases: The Psychology of Intuitive
+                  Judgment},
+  publisher     = {Cambridge University Press, Cambrighe},
+  year          = {2002},
+  url           = "http://assets.cambridge.org/97805217/92608/sample/9780521792608ws.pdf"
+                  
+}
+
 @Article{         temperley96:algorithm,
   author        = {Temperley, David},
   title         = {An Algorithm for Harmonic Analysis},
